--- a/index.html
+++ b/index.html
@@ -850,7 +850,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</code></pre
         auth_signed_out:"No sign in",
 
         ad_title:"FocusFlow Ad Script",
-        ad_sub:"One short script weh show weh FocusFlow stand by.",
+        ad_sub:"Wah short script weh show weh FocusFlow stand by.",
         ad_tag:"Script",
 
         license_title:"License",
